OO-7695: Improvement in question pool selection and configuration settings for practice node